ME_4600/MESDK/ME-4000/VC/me4000dll.h



int _declspec(dllexport) me4000DIOGetBit(
    unsigned int uiBoardNumber,
    unsigned int uiPortNumber,
    unsigned int uiBitNumber,
    int* piBitValue);


int _declspec(dllexport) me4000DIOGetByte(
    unsigned int uiBoardNumber,
    unsigned int uiPortNumber,
    unsigned char* pucByteValue);


int _declspec(dllexport) me4000DIOSetBit(
    unsigned int uiBoardNumber,
    unsigned int uiPortNumber,
    unsigned int uiBitNumber,
    int iBitValue);


int _declspec(dllexport) me4000DIOSetByte(
    unsigned int uiBoardNumber,
    unsigned int uiPortNumber,
    unsigned char ucByteValue);


/*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                            Counter Routines                                   |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*/

int _declspec(dllexport) me4000CntWrite(
    unsigned int uiBoardNumber,
    unsigned int uiCounterNumber,
    int iMode,
    unsigned short usValue);


int _declspec(dllexport) me4000CntRead(
    unsigned int uiBoardNumber,
    unsigned int uiCounterNumber,
    unsigned short* pusValue);


int _declspec(dllexport) me4000CntPWMStart(
    unsigned int uiBoardNumber,
	unsigned int uiPreScaler,
    int iDutyCycle);


int _declspec(dllexport) me4000CntPWMStop(
    unsigned int uiBoardNumber);


/*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                         External interrupt Routines                           |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*/

int _declspec(dllexport) me4000ExtIrqEnable(
    unsigned int uiBoardNumber,
    ME4000_P_EXT_IRQ_PROC pExtIrqProc,
    void* pExtIrqContext);


int _declspec(dllexport) me4000ExtIrqDisable(
    unsigned int uiBoardNumber);


int _declspec(dllexport) me4000ExtIrqGetCount(
    unsigned int uiBoardNumber,
    unsigned int* puiIrqCount);


/*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                       DIO Bit Pattern Routines                                |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*/

int _declspec(dllexport) me4000DIOBPPortConfig(
    unsigned int uiBoardNumber,
    unsigned int uiPortNumber,
    int iOutputMode);


int _declspec(dllexport) me4000DIOBPConfig(
    unsigned int uiBoardNumber,
    unsigned long ulTicks,
    int iTriggerMode,
    int iExtTriggerEdge);


int _declspec(dllexport) me4000DIOBPWraparound(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulDataCount,
    unsigned long ulLoops,
    int iExecutionMode,
    ME4000_P_DIOBP_TERMINATE_PROC pTerminateProc,
    void* pTerminateContext,
    unsigned long ulTimeOutSeconds);


int _declspec(dllexport) me4000DIOBPContinuous(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulDataCount,
    ME4000_P_DIOBP_CALLBACK_PROC pCallbackProc,
    void* pCallbackContext,
    unsigned long ulTimeOutSeconds,
    unsigned long* pulNumberOfValuesWritten);


int _declspec(dllexport) me4000DIOBPStart(
    unsigned int uiBoardNumber);


int _declspec(dllexport) me4000DIOBPAppendNewValues(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulNumberOfValuesToAppend,
    int iExecutionMode,
    unsigned long* pulNumberOfValuesAppended);


int _declspec(dllexport) me4000DIOBPStop(
    unsigned int uiBoardNumber,
    int iStopMode);


int _declspec(dllexport) me4000DIOBPReset(
    unsigned int uiBoardNumber);


int _declspec(dllexport) me4000DIOBPGetStatus(
    unsigned int uiBoardNumber,
    int iWaitIdle,
    int* piStatus);


/*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                            MultiSig Routines                                  |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*/

int _declspec(dllexport) me4000MultiSigOpen(
    unsigned int uiBoardNumber);


int _declspec(dllexport) me4000MultiSigReset(
    unsigned int uiBoardNumber);


int _declspec(dllexport) me4000MultiSigAddressLED(
    unsigned int uiBoardNumber,
    unsigned int uiBase,
    int iLEDStatus);


int _declspec(dllexport) me4000MultiSigSetGain(
    unsigned int uiBoardNumber,
    unsigned int uiBase,
    int iChannelGroup,
    int iGain);


int _declspec(dllexport) me4000MultiSigClose(
    unsigned int uiBoardNumber);


/*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                            MultiSigAI Routines                                |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*/

int _declspec(dllexport) me4000MultiSigAIOpen(
    unsigned int uiBoardNumber);


int _declspec(dllexport) me4000MultiSigAISingle(
    unsigned int uiBoardNumber,
    unsigned int uiAIChannelNumber,
    unsigned int uiMuxChannelNumber,
    int iGain,
    int iTriggerMode,
    int iExtTriggerEdge,
    unsigned long ulTimeOutSeconds,
    short* psDigitalValue);


int _declspec(dllexport) me4000MultiSigAIConfig(
    unsigned int uiBoardNumber,
    unsigned int uiAIChannelNumber,
    unsigned char* pucMuxChanList,
    unsigned int uiMuxChanListCount,
    unsigned long ulReserved,
    unsigned long ulChanTicks,
    unsigned long ulScanTicksLow,
    unsigned long ulScanTicksHigh,
    int iAcqMode,
    int iExtTriggerMode,
    int iExtTriggerEdge);


int _declspec(dllexport) me4000MultiSigAIScan(
    unsigned int uiBoardNumber,
    unsigned int uiNumberOfMuxLists,
    short* psBuffer,
    unsigned long ulBufferSizeValues,
    int iExecutionMode,
    ME4000_P_AI_CALLBACK_PROC pCallbackProc,
    void* pCallbackContext,
    unsigned int uiRefreshFrequency,
    ME4000_P_AI_TERMINATE_PROC pTerminateProc,
    void* pTerminateContext,
    unsigned long ulTimeOutSeconds);


int _declspec(dllexport) me4000MultiSigAIContinuous(
    unsigned int uiBoardNumber,
    ME4000_P_AI_CALLBACK_PROC pCallbackProc,
    void* pCallbackContext,
    unsigned int uiRefreshFrequency,
    unsigned long ulTimeOutSeconds);


int _declspec(dllexport) me4000MultiSigAIStart(
    unsigned int uiBoardNumber);


int _declspec(dllexport) me4000MultiSigAIGetNewValues(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulNumberOfValuesToRead,
    int iExecutionMode,
    unsigned long* pulNumberOfValuesRead,
    int* piLastError);


int _declspec(dllexport) me4000MultiSigAIStop(
    unsigned int uiBoardNumber,
    int iReserved);


int _declspec(dllexport) me4000MultiSigAIExtractValues(
    unsigned int uiMuxChannelNumber,
    short* psAIBuffer,
    unsigned long ulAIDataCount,
    unsigned char* pucMuxChanList,
    unsigned int uiMuxChanListCount,
    short* psChanBuffer,
    unsigned long ulChanBufferSizeValues,
    unsigned long* pulChanDataCount);


int _declspec(dllexport) me4000MultiSigAIDigitToSize(
    short sDigit,
    int iGain,
    int iModuleType,
    double dRefValue,
    double* pdSize);


int _declspec(dllexport) me4000MultiSigAIReset(
    unsigned int uiBoardNumber);


int _declspec(dllexport) me4000MultiSigAIGetStatus(
    unsigned int uiBoardNumber,
    int iWaitIdle,
    int* piStatus);


int _declspec(dllexport) me4000MultiSigAIClose(
    unsigned int uiBoardNumber);


/*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                            MultiSigAO Routines                                |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*/

int _declspec(dllexport) me4000MultiSigAOOpen(
    unsigned int uiBoardNumber);


int _declspec(dllexport) me4000MultiSigAOSingle(
    unsigned int uiBoardNumber,
    unsigned int uiDemuxChannelNumber,
    int iTriggerMode,
    int iExtTriggerEdge,
    unsigned long ulTimeOutSeconds,
    short sValue);


int _declspec(dllexport) me4000MultiSigAOConfig(
    unsigned int uiBoardNumber,
    unsigned char* pucDemuxChanList,
    unsigned int uiDemuxChanListCount,
    unsigned long ulTicks,
    int iTriggerMode,
    int iExtTriggerEdge);


int _declspec(dllexport) me4000MultiSigAOWraparound(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulDataCount,
    unsigned long ulLoops,
    int iExecutionMode,
    ME4000_P_AO_TERMINATE_PROC pTerminateProc,
    void* pTerminateContext,
    unsigned long ulTimeOutSeconds);


int _declspec(dllexport) me4000MultiSigAOContinuous(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulDataCount,
    ME4000_P_AO_CALLBACK_PROC pCallbackProc,
    void* pCallbackContext,
    unsigned long ulTimeOutSeconds,
    unsigned long* pulNumberOfValuesWritten);


int _declspec(dllexport) me4000MultiSigAOStart(
    unsigned int uiBoardNumber);


int _declspec(dllexport) me4000MultiSigAOAppendNewValues(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulNumberOfValuesToAppend,
    int iExecutionMode,
    unsigned long* pulNumberOfValuesAppended);


int _declspec(dllexport) me4000MultiSigAOStop(
    unsigned int uiBoardNumber,
    int iStopMode);


int _declspec(dllexport) me4000MultiSigAOVoltToDigit(
    double dVolt,
    short* psDigit);


int _declspec(dllexport) me4000MultiSigAOReset(
    unsigned int uiBoardNumber);